--- a/thesis.tex
+++ b/thesis.tex
@@ -36,8 +36,8 @@
 %% ale hlavně ho používáme k uložení metadat do PDF (včetně obsahu).
 %% POZOR, nezapomeňte vyplnit jméno práce a autora.
 \usepackage[ps2pdf,unicode]{hyperref}   % Musí být za všemi ostatními balíčky
-\hypersetup{pdftitle=Název práce}
-\hypersetup{pdfauthor=Jméno Příjmení}
+\hypersetup{pdftitle=Development of a cloud platform for automatic speech recognition}
+\hypersetup{pdfauthor=Ondřej Klejch}
 
 %%% Drobné úpravy stylu
 
@@ -94,34 +94,34 @@ Faculty of Mathematics and Physics
 \vfill
 \vspace{5mm}
 
-{\LARGE First and last name of the author}
+{\LARGE Ondřej Klejch}
 
 \vspace{15mm}
 
 % Název práce přesně podle zadání
-{\LARGE\bfseries Title of the thesis}
+{\LARGE\bfseries Development of a cloud platform for automatic speech recognition}
 
 \vfill
 
 % Název katedry nebo ústavu, kde byla práce oficiálně zadána
 % (dle Organizační struktury MFF UK)
-Name of the department or institute
+Institute of Formal and Applied Linguistics
 
 \vfill
 
 \begin{tabular}{rl}
 
-Supervisor of the master thesis: & First and last name \\
+Supervisor of the master thesis: & Mgr. Ing. Filip Jurčíček Ph.D. \\
 \noalign{\vspace{2mm}}
-Study programme: & programme \\
+Study programme: & Informatics \\
 \noalign{\vspace{2mm}}
-Specialization: & specialization \\
+Specialization: & Theoretical Computer Science \\
 \end{tabular}
 
 \vfill
 
 % Zde doplňte rok
-Prague YEAR
+Prague 2015
 
 \end{center}
 
@@ -172,18 +172,18 @@ signature of the author
 \setlength\parskip{5mm}
 
 Název práce:
-Název práce
+Development of a cloud platform for automatic speech recognition
 % přesně dle zadání
 
 Autor:
-Jméno a příjmení autora
+Ondřej Klejch
 
 Katedra:  % Případně Ústav:
-Název katedry či ústavu, kde byla práce oficiálně zadána
+Ústav formální a aplikované lingvistiky
 % dle Organizační struktury MFF UK
 
 Vedoucí diplomové práce:
-Jméno a příjmení s tituly, pracoviště
+Mgr. Ing. Filip Jurčíček Ph.D., Ústav formální a aplikované lingvistiky
 % dle Organizační struktury MFF UK, případně plný název pracoviště mimo MFF UK
 
 Abstrakt:
@@ -197,17 +197,17 @@ Klíčová slova:
 \setlength\parskip{5mm}
 
 Title:
-% přesný překlad názvu práce v angličtině
+Development of a cloud platform for automatic speech recognition
 
 Author:
-Jméno a příjmení autora
+Ondřej Klejch
 
 Department:
-Název katedry či ústavu, kde byla práce oficiálně zadána
+Institute of Formal and Applied Linguistics
 % dle Organizační struktury MFF UK v angličtině
 
 Supervisor:
-Jméno a příjmení s tituly, pracoviště
+Mgr. Ing. Filip Jurčíček Ph.D., Institute of Formal and Applied Linguistics
 % dle Organizační struktury MFF UK, případně plný název pracoviště
 % mimo MFF UK v angličtině
 
