--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,12 @@
 \usepackage{graphicx}
 \usepackage{amsthm}
 
+\usepackage[english]{babel}
+\usepackage{blindtext}
+
+\usepackage{xcolor}
+\newcommand\todo[1]{\textcolor{red}{!!#1!!}}
+
 %% Balíček hyperref, kterým jdou vyrábět klikací odkazy v PDF,
 %% ale hlavně ho používáme k uložení metadat do PDF (včetně obsahu).
 %% POZOR, nezapomeňte vyplnit jméno práce a autora.
