Introduction & conclusion improved.

--- a/epilog.tex
+++ b/epilog.tex
@@ -3,7 +3,9 @@
 
 Goals of this thesis were to develop a cloud platform for ASR, CloudASR,
   and an annotation interface for annotating speech data.
-These goals were successfully accomplished and in several aspects even surpassed.
+These goals were successfully accomplished and in several aspects even surpassed
+  - in addition to original requirement to create batch recognition mode,
+  we also implemented online recognition mode.
 In the following sections we summarize our achievements in detail and
   at the end we propose ideas for future work.
 
