--- a/preface.tex
+++ b/preface.tex
@@ -10,7 +10,7 @@ On one hand, there are several open-source ASR toolkits,
 On the other hand, there are a few webservices that provide ASR as a service,
   yet these webservices don't solve all problems -
   either they are paid, closed-source or they are not customizable.
-So the first goal of the thesis is to develop a cloud platform for ASR
+So \textbf{the first goal of the thesis is to develop a cloud platform for ASR}
   that is easy to use both from user's and maintainer's point of view.
 
 Although accuracy of ASR systems is improving,
@@ -19,7 +19,7 @@ One of the reasons is that accuracy of ASR systems relies heavily on the amount 
   and there isn't enough publicly available transcribed speech data.
 By providing free ASR webservice it is possible to collect vast amount of recordings
   that can be manually transcribed and used later on for further research.
-Consequently, the second goal of the thesis is to create an annotation interface
+Consequently, \textbf{the second goal of the thesis is to create an annotation interface}
   so that recordings obtained by CloudASR platform can be annotated and given back to the community.
 
 In the following text there will be described development and deployment of CloudASR platform and of its annotation interface.
