Draft of the structure created.

--- a/thesis.tex
+++ b/thesis.tex
@@ -238,14 +238,16 @@ Keywords:
 \tableofcontents
 
 %%% Jednotlivé kapitoly práce jsou pro přehlednost uloženy v samostatných souborech
-\include{preface}
-\include{chap1}
-\include{chap2}
+\include{introduction}
+\include{asr}
+\include{technologies}
+\include{solution}
+\include{evaluation}
 
 % Ukázka použití některých konstrukcí LateXu (odkomentujte, chcete-li)
 % \include{example}
 
-\include{epilog}
+\include{conclusion}
 
 %%% Seznam použité literatury
 \include{bibliography}
