--- a/introduction.tex
+++ b/introduction.tex
@@ -1,14 +1,14 @@
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 
-The most natural form of people's communication is speech.
+The most natural form of human communication is speech.
 In order to be able to talk with a computer,
   it is crucial to have a good Automatic Speech Recognition (ASR) system.
 On one hand, there are several open-source ASR toolkits,
   however deployment of such toolkits requires substantial knowledge therefore
-  for common software developers it's not easy to use them.
+  for common software developers it is not easy to use them.
 On the other hand, there are a few webservices that provide ASR as a service,
-  yet these webservices don't solve all problems -
+  yet these webservices do not solve all problems -
   either they are paid, closed-source or they are not customizable.
 So \textbf{the first goal of the thesis is to develop a cloud platform for ASR}
   that is easy to use both from user's and maintainer's point of view.
@@ -16,7 +16,7 @@ So \textbf{the first goal of the thesis is to develop a cloud platform for ASR}
 Although accuracy of ASR systems is improving,
   these systems are still far from perfect.
 One of the reasons is that accuracy of ASR systems relies heavily on the amount of the training data
-  and there isn't enough publicly available transcribed speech data.
+  and there is not enough publicly available transcribed speech data.
 By providing free ASR webservice it is possible to collect vast amount of recordings
   that can be manually transcribed and used later on for further research.
 Consequently, \textbf{the second goal of the thesis is to create an annotation interface}
