--- a/technologies.tex
+++ b/technologies.tex
@@ -163,3 +163,7 @@ Because the demo demonstrates the online speech recognition mode,
   it is not possible to wait for whole recording to be recorded and then send it to the API via HTTP POST request,
   thus, CloudASR uses \textbf{Socket.IO}\footnote{\url{http://socket.io/}} to send stream of chunks to the API
   and to receieve stream of results from the API.
+
+
+\IDEA{Theano for VAD}
+\IDEA{Pykaldi}
